0.2.15

2018-03-17  Brecht Sanders  https://github.com/brechtsanders/

  * removed "OPTIONAL_LINE_BREAK" from sheet1.xml in libxlsxio_write

0.2.14

2018-03-16  Brecht Sanders  https://github.com/brechtsanders/

  * fixed Makefile issues, now properly builds with WIDE=1
  * added build instructions to README.md
  * added example code to README.md

0.2.13

2018-03-16  Brecht Sanders  https://github.com/brechtsanders/

  * fixed hang on Windows when building release version with MinGW-64 (fixed by using stricmp instead of strcasecmp)
  * added CMake option WITH_WIDE to build UTF-16 library (libxlsxio_readw) - experimental, only tested on Windows

0.2.12

2018-03-15  Brecht Sanders  https://github.com/brechtsanders/

  * added support for minizip and made this the default instead of libzip
  * xlsxioread_open_memory() parameter data is no longer const void* but void* to allow free()
  * fixed Doxygen warnings
  * fixed CMake issues with Windows static libraries

2018-02-03  Brecht Sanders  https://github.com/brechtsanders/

  * modified Makefile to support WIDE=1 parameter to build UTF-16 library (libxlsxio_readw)

0.2.11

2017-12-31  Brecht Sanders  https://github.com/brechtsanders/

  * fixed CMakeLists.txt for proper DLL builds on Windows

2017-11-28  Brecht Sanders  https://github.com/brechtsanders/

  * fixed bug in XML_Char_poscpy when compiled for UTF-16 (thanks to https://github.com/dsmccall)

2017-11-16  Brecht Sanders  https://github.com/brechtsanders/

  * fixed minor memory leak whean cleaning up shared string list

2017-11-11  Brecht Sanders  https://github.com/brechtsanders/

  * added wchar_t support, requires building with -DXML_UNICODE and expat also built with -DXML_UNICODE
  * fixed memory issue in xlsxioread_process()

2017-11-09  Brecht Sanders  https://github.com/brechtsanders/

  * added xlsxioread_open_filehandle() to read file using file descriptor

0.2.10

2017-10-31  Brecht Sanders  https://github.com/brechtsanders/
